fix(magda): selects z-index

--- a/src/assets/style/components/_forms.scss
+++ b/src/assets/style/components/_forms.scss
@@ -160,6 +160,7 @@ form.cms {
     margin: auto {
       bottom: 20px;
     }
+    
   }
   .form-control {
     background: $crl-main-grey;
@@ -173,6 +174,12 @@ form.cms {
     z-index: 5;
     label {
       text-align: center;
+    }
+    &:nth-child(2) {
+      z-index: 9;
+    }
+    &:nth-child(8){
+      z-index: 8;
     }
   }
   .form-info {
